--- a/Round3/Manuscript/Permuting_Accuracy.bib
+++ b/Round3/Manuscript/Permuting_Accuracy.bib
@@ -1546,3 +1546,91 @@ Contact: tongt@hkbu.edu.hk},
 	year={1969},
 	publisher={JSTOR}
 }
+
+@inproceedings{lopes2011more,
+	title={A more powerful two-sample test in high dimensions using random projection},
+	author={Lopes, Miles and Jacob, Laurent and Wainwright, Martin J},
+	booktitle={Advances in Neural Information Processing Systems},
+	pages={1206--1214},
+	year={2011}
+}
+
+@article{shen2015adaptive,
+	title={An adaptive test for the mean vector in large-p-small-n problems},
+	author={Shen, Yanfeng and Lin, Zhengyan},
+	journal={Computational Statistics \& Data Analysis},
+	volume={89},
+	pages={25--38},
+	year={2015},
+	publisher={Elsevier}
+}
+
+@article{xu2016adaptive,
+	title={An adaptive two-sample test for high-dimensional means},
+	author={Xu, Gongjun and Lin, Lifeng and Wei, Peng and Pan, Wei},
+	journal={Biometrika},
+	volume={103},
+	number={3},
+	pages={609--624},
+	year={2016},
+	publisher={Oxford University Press}
+}
+
+@article{zhang2016high,
+	title={A high-dimension two-sample test for the mean using cluster subspaces},
+	author={Zhang, Jie and Pan, Meng},
+	journal={Computational Statistics \& Data Analysis},
+	volume={97},
+	pages={87--97},
+	year={2016},
+	publisher={Elsevier}
+}
+
+@inproceedings{olivetti2013kernel,
+	title={The kernel two-sample test vs. brain decoding},
+	author={Olivetti, Emanuele and Benozzo, Danilo and Kia, Seyed Mostafa and Ellero, Marta and Hartmann, Thomas},
+	booktitle={Pattern Recognition in Neuroimaging (PRNI), 2013 International Workshop on},
+	pages={128--131},
+	year={2013},
+	organization={IEEE}
+}
+
+@article{yu2007two,
+	title={Two-sample Comparison Based on Prediction Error, with Applications to Candidate Gene Association Studies},
+	author={Yu, K and Martin, R and Rothman, N and Zheng, T and Lan, Q},
+	journal={Annals of human genetics},
+	volume={71},
+	number={1},
+	pages={107--118},
+	year={2007},
+	publisher={Wiley Online Library}
+}
+
+@article{friedman2003multivariate,
+	title={On multivariate goodness of fit and two sample testing},
+	author={Friedman, Jerome H},
+	journal={eConf},
+	volume={30908},
+	number={SLAC-PUB-10325},
+	pages={311--313},
+	year={2003}
+}
+
+@inproceedings{eric2008testing,
+	title={Testing for homogeneity with kernel fisher discriminant analysis},
+	author={Eric, Moulines and Bach, Francis R and Harchaoui, Za{\"\i}d},
+	booktitle={Advances in Neural Information Processing Systems},
+	pages={609--616},
+	year={2008}
+}
+
+@article{nishiyama2013testing,
+	title={Testing linear hypotheses of mean vectors for high-dimension data with unequal covariance matrices},
+	author={Nishiyama, Takahiro and Hyodo, Masashi and Seo, Takashi and Pavlenko, Tatjana},
+	journal={Journal of Statistical Planning and Inference},
+	volume={143},
+	number={11},
+	pages={1898--1911},
+	year={2013},
+	publisher={Elsevier}
+}
