restructured and started version 3

--- a/Round3/Manuscript/Permuting_Accuracy.bib
+++ b/Round3/Manuscript/Permuting_Accuracy.bib
@@ -1634,3 +1634,35 @@ Contact: tongt@hkbu.edu.hk},
 	year={2013},
 	publisher={Elsevier}
 }
+
+@article{hall2002permutation,
+	title={Permutation tests for equality of distributions in high-dimensional settings},
+	author={Hall, Peter and Tajvidi, Nader},
+	journal={Biometrika},
+	volume={89},
+	number={2},
+	pages={359--374},
+	year={2002},
+	publisher={Oxford University Press}
+}
+
+@article{thulin2014high,
+	title={A high-dimensional two-sample test for the mean using random subspaces},
+	author={Thulin, M{\aa}ns},
+	journal={Computational Statistics \& Data Analysis},
+	volume={74},
+	pages={26--38},
+	year={2014},
+	publisher={Elsevier}
+}
+
+@article{cheng2017multiple,
+	title={Multiple testing of local maxima for detection of peaks in random fields},
+	author={Cheng, Dan and Schwartzman, Armin and others},
+	journal={The Annals of Statistics},
+	volume={45},
+	number={2},
+	pages={529--556},
+	year={2017},
+	publisher={Institute of Mathematical Statistics}
+}
